.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:24:27 **** Incremental Build of configuration Debug for project Game-Card ****
make all 
Building file: ../src/gamecard_handler.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/gamecard_handler.d" -MT"src/gamecard_handler.o" -o "src/gamecard_handler.o" "../src/gamecard_handler.c"
../src/gamecard_handler.c: In function ‘obtenerPathDelNumeroDeBloque’:
../src/gamecard_handler.c:71:40: error: ‘gamecard_config’ undeclared (first use in this function)
  char* path_del_bloque = malloc(strlen(gamecard_config->punto_montaje_tallgrass)+strlen("/Bloques")+20);
                                        ^
../src/gamecard_handler.c:71:40: note: each undeclared identifier is reported only once for each function it appears in
src/subdir.mk:36: recipe for target 'src/gamecard_handler.o' failed
make: *** [src/gamecard_handler.o] Error 1
